Completion of my website

--- a/index.html
+++ b/index.html
@@ -11,15 +11,44 @@
     <section class="top-banner">
         <div class="half-width">
      <h1>Welcome To</h1>
-    <h1><span class="name">Sk Rasel</span> Website</h1>
+    <h1><span class="orange">Sk Rasel</span> Website</h1>
     <h3>Professional Web Developer</h3>
     <p>As a professional web developer i pride myself on always exceeding my client's expectations. Every piece of code i develop is expertly coded by my coding experience. If you're looking for a talented web developer to build your new website, you've come to the right place. Whether your website development needs are big or small, let me tailor the perfect solution.</p>
     <a class="button" target="_blank" href="https://www.linkedin.com/in/sk-rasel-2b7a74189/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile.jpg" alt="">
-
         </div>
     </section>
+
+    <section class="dream">
+        <div class="half-width">
+            <img src="images/profile2.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h2 class="block-head">Dream</h2>
+            <h3>Become a Google Employee</h3>
+            <p>I'm on my way to become a Professional web developer and i hope if i can continue learning these oneday i'll become a great front-end developer. Afterwards i'll concentrate on software development and apply on google for job</p>
+            <a class="button-fb" target="_blank" href="https://www.facebook.com/skrasel143/">Visit My Facebook</a>
+        </div>
+    </section>
+
+    <section class="exp-area">
+        <h2 class="block-head2">Experience</h2>
+        <div id="full-stack" class="half-width experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3c class="orange">2021-Present | Professional Developer</h3>
+            <p>I am the master of HTML, CSS and JavaScript. i know everything need to mak a website functional and efficient. I didn't stop with the web. i went beyond with the most popular javascriot framework called Vuejs. I even know the deployment, server and security. I will give you 100% web solution</p>
+        </div>
+        <div id="junior" class="half-width experience">
+            <h2>Junior Web Developer</h2>
+            <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job but i made myself as a remote web developer. I made their website and showed it to them. They liked it and uploaded the content. it was fun working at Programming Hero.</p>
+        </div>
+    </section>
+
+    <footer id="main-footer">
+        <p> &copy; Sk Rasel Website | All rights reserved</p>
+    </footer>
 </body>
 </html>
